vscode settings and ideavimrc

--- a/.ideavimrc
+++ b/.ideavimrc
@@ -74,7 +74,7 @@ nnoremap <leader>le :action ShowErrorDescription<CR>
 nnoremap <leader>la :action ShowIntentionActions<CR>
 vnoremap <leader>la :action ShowIntentionActions<CR>
 map <C-c> <Esc>
-map <leader>lq :action QuickJavaDoc<CR>
+map <S-k> :action QuickJavaDoc<CR>
 map <leader>lp :action ParameterInfo<CR>
 nnoremap <leader>i :action Generate<CR>
 
